[package]
name = "otk"
version = "0.1.0"
authors = ["Frefreak <frefreak.zxy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.10.3" }
prost-types = { version = "0.10.1" }
bytes = { version = "1.0.1" }
clap = { version = "4.4.11", features = ["color", "suggestions", "derive", "env"] }
once_cell = "1.7.2"
base64 = "0.13.0"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
strum = "0.20"
strum_macros = "0.20"
quick-error = "2.0.0"
futures = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls", "transport"] }
opentelemetry = { version = "0.21.0" }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "tls", "http-proto", "reqwest-client", "metrics", "logs"] }
hex = "0.4.3"
rand = "0.8.5"
opentelemetry_sdk = { version = "0.21.1", features = ["metrics", "logs", "rt-tokio"] }

# opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev="3ff1802", features = ["rt-tokio", "metrics"]}
# opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev="3ff1802", features = ["tonic", "tls", "http-proto", "reqwest-client", "metrics"] }

[build-dependencies]
prost-build = "0.10.3"
